--- a/setup/index.html
+++ b/setup/index.html
@@ -13,7 +13,27 @@
 </head>
 
 <body>
-  <h1>review project</h1>
+  <main>
+    <section class="container">
+      <!-- title -->
+      <div class="title">
+        <h2>our reviews</h2>
+        <div class="underline"></div>
+      </div>
+      <!-- review -->
+      <article class="review">
+        <div class="img-container">
+          <img src="./person-1.jpeg" id="person-img" alt="">
+        </div>
+        <h4 id="author">sara jones</h4>
+        <p id="job">ux designer</p>
+        <p id="info">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem repudiandae eum, sequi blanditiis
+          facere expedita, cum inventore et aut quis autem accusamus a, ea odit veniam ad unde ut nemo?
+        </p>
+      </article>
+    </section>
+  </main>
   <!-- javascript -->
   <script src="app.js"></script>
 </body>
