--- a/setup/index.html
+++ b/setup/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Starter</title>
+  <title>Reviews</title>
   <!-- font-awesome -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" />
 
@@ -31,6 +31,17 @@
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem repudiandae eum, sequi blanditiis
           facere expedita, cum inventore et aut quis autem accusamus a, ea odit veniam ad unde ut nemo?
         </p>
+        <!-- prev next button -->
+        <div class="button-container">
+          <button class="prev-btn">
+            <i class="fas fa-chevron-left"></i>
+          </button>
+          <button class="next-btn">
+            <i class="fas fa-chevron-right"></i>
+          </button>
+        </div>
+        <!-- random button -->
+        <button class="random-btn">surprise me</button>
       </article>
     </section>
   </main>
